--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@ DOCTYPE html>
     </form>
 
     <!-- MESSAGES SECTION -->
-    <section class="messages-section show" id="messages-section">
+    <section class="messages-section" id="messages-section">
       <h2>Messages</h2>
 
       <!-- messages list -->
