--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -28,29 +28,11 @@ DOCTYPE html>
 
       <!-- messages list -->
       <ul class="messages-section__list" id="messages-list">
-        <li class="message">
-          <h3 class="message__author">John Doe</h3>
-          <div class="message__content">
-            Hello!
-          </div>
-        </li>
-        <li class="message message--self">
-            <h3 class="message__author">You</h3>
-            <div class="message__content">
-              Hi!
-            </div>
-          </li>
-        <li class="message message--self message--received">
-          <h3 class="message__author">You</h3>
-          <div class="message__content">
-            It's great to see you again!
-          </div>
-        </li>
       </ul>
 
       <!-- messages form -->
       <form id="add-messages-form">
-        <input class="text-input" type="text" placeholder="Type your message here" id="message-content">
+        <input class="text-input" type="text" placeholder="Type your message here" id="message-content" autocomplete="off">
         <button class="btn" type="submit">Send</button>
       </form>
 
